Added welcome discount offer

--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
       </section>  <!-- End #about -->
     </main>
 
+    <!-- ********** Welcome Offer ********** -->
+    <p id="offer">Click for welcome offer</p>
+    <form id="form" action="https://www.freecodecamp.com/email-submit">
+      <span class="close">X</span>
+      <p>Sign up today and get a welcome discount</p>
+      <input type="email" id="email" name="email" placeholder="Enter your email here" required>
+      <input type="submit" id="submit" value="Get Code">
+      <p class="disclaimer">*Limited time offer. New customers only</p>
+    </form>
+
     <footer>
       <p class="author">
         Created by Vivian Seto for Product Landing Page project on <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-product-landing-page/">freeCodeCamp</a>. Information on this page taken from <a href="https://www.cupandleaf.com/blog/types-of-tea" target="_blank">Cup & Leaf</a>
