Added bootstrap tab-content for info on products

--- a/index.html
+++ b/index.html
@@ -106,6 +106,60 @@
                 <span class="sr-only">Next</span>
               </a>  <!-- End .carousel-control-next -->
             </div>  <!-- End .carousel -->
+
+            <div id="tabs_div" class="col-lg">
+              <nav class="nav nav-tabs">
+                <a class="nav-item nav-link active" href="#white_tea" data-toggle="tab">White Tea</a>
+                <a class="nav-item nav-link" href="#green_tea" data-toggle="tab">Green Tea</a>
+                <a class="nav-item nav-link" href="#oolong_tea" data-toggle="tab">Oolong Tea</a>
+                <a class="nav-item nav-link" href="#black_tea" data-toggle="tab">Black Tea</a>
+              </nav>  <!-- End .nav-tabs -->
+
+              <div class="tab-content">
+                <!-- White tea .tab-pane -->
+                <div id="white_tea" class="tab-pane fade active show" role="tabpanel">
+                  <ul>
+                    <li>Least processed of the true teas and undergoes only one simple manufacturing process</li>
+                    <li>Light yellow in color but some varieties can have hints of green</li>
+                    <li>One of the more mild-flavored true teas</li>
+                    <li>Has floral and fruity undertones that add a natural sweetness</li>
+                    <li>The two popular varieties are Silver Needle and White Peony</li>
+                  </ul>
+                </div>  <!-- End white tea .tab-pane -->
+                
+                <!-- Green tea .tab-pane -->
+                <div id="green_tea" class="tab-pane fade" role="tabpanel">
+                  <ul>
+                    <li>Green tea leaves undergo a multi-step production procsss but like white tea leaves, don't undergo an oxidation process</li>
+                    <li>Most are light green or slightly yellow in color</li>
+                    <li>Chinese green teas are pan fried to produce roasted nutty flavors</li>
+                    <li>Japanese green teas are steamed to preserve vegetal and herbaceous flavors</li>
+                    <li>Popular varieties include gunpowder, matcha, genmaicha, and sencha green teas</li>
+                  </ul>
+                </div>  <!-- End green tea .tab-pane -->
+
+                <!-- Oolong tea .tab-pane -->
+                <div id="oolong_tea" class="tab-pane fade" role="tabpanel">
+                  <ul>
+                    <li>Known as 'wulong tea' in China</li>
+                    <li>Semi-oxidized tea that's deep amber or light green in color and offers a floral flavor with a smooth finish that results in medium-bodied taste</li>
+                    <li>Oolong teas are produced solely in China and Taiwan and are often named based on the region they're cultivated</li>
+                    <li>The least oxidized oolong teas are known as pouchongs and one of the most heavily oxidized oolong tea is Da Hong Pao</li>
+                  </ul>
+                </div>  <!-- End oolong tea .tab-pane -->
+
+                <!-- Black tea .tab-pane -->
+                <div id="black_tea" class="tab-pane fade" role="tabpanel">
+                  <ul>
+                    <li>The most popular type of tea in the West</li>
+                    <li>Black teas are most commonly produced in China and on the Indian continent</li>
+                    <li>The taste can be vastly different depending on the specific tea leaves and blend</li>
+                    <li>The growing regions in India that produce the largest amounts of black tea include Assam and Darjeeling</li>
+                    <li>The third largest growing region is Nilgiri in Sri Lanki, formerly known as Ceylon</li>
+                  </ul>
+                </div>  <!-- End black tea .tab-pane -->
+              </div>  <!-- End .tab-content -->
+            </div>  <!-- End #tabs_div -->
           </div>  <!-- End .rows -->
         </div>  <!-- End .container-fluid -->
       </section>  <!-- End #products -->
