Made navbar collapse after clicking on nav items. Made dropdown items into carousel indicators. Synced carousel and tab-content w/ each other

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <li class="nav-item dropdown">
               <a id="nav_dropdown" class="nav-link dropdown-toggle" href="#header" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu" aria-labelledby="nav_dropdown">
-                <a class="dropdown-item" href="#header">Shop White Tea</a>
-                <a class="dropdown-item" href="#header">Shop Green Tea</a>
-                <a class="dropdown-item" href="#header">Shop Oolong Tea</a>
-                <a class="dropdown-item" href="#header">Shop Black Tea</a>
-                <a class="dropdown-item" href="#header">Shop All Teas</a>
+                <a class="dropdown-item" href="#products">Shop White Tea</a>
+                <a class="dropdown-item" href="#products">Shop Green Tea</a>
+                <a class="dropdown-item" href="#products">Shop Oolong Tea</a>
+                <a class="dropdown-item" href="#products">Shop Black Tea</a>
+                <a class="dropdown-item" href="#products">Shop All Teas</a>
               </div>  <!-- End .dropdown-menu -->
             </li>  <!-- End .nav-item .dropdown -->
             <li class="nav-item">
@@ -177,7 +177,7 @@
           The leaves of <i>Camellia sinensis</i> contain naturally occurring caffeine that's actually higher in concentration than in coffee beans. Coffee is only stronger than tea because it's more concentrated when brewed. The actual caffeine content in a cup of true tea varies largely depending on the production method.
         </p>
         <div class="video_container">
-          <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/WJcxBW9DkSs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/WJcxBW9DkSs" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>  <!-- End #about -->
     </main>
