--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- ********** Products section ********** -->
       <section id="products">
         <div class="container-fluid mt-lg-3">
-          <div class="row align-items-center">
+          <div class="row">
             <div id="product_slides" class="carousel slide col-lg" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#product_slides" data-slide-to="0" class="active"></li>
