Rewrote styles using scss

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <footer>
       <p class="author">
-        Created by Vivian Seto for Product Landing Page project on <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-product-landing-page/">freeCodeCamp</a>. Information on this page taken from <a href="https://www.cupandleaf.com/blog/types-of-tea" target="_blank">Cup & Leaf</a>
+        Created by Vivian S for Product Landing Page project on <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-product-landing-page/">freeCodeCamp</a>. Information on this page taken from <a href="https://www.cupandleaf.com/blog/types-of-tea" target="_blank">Cup & Leaf</a>
       </p>
     </footer>
 
